fixes gap from h1

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,3 +15,7 @@ body {
 b {
   color: #f2f2f2;
 }
+
+.titulo-principal {
+  margin: 0;
+}
